need to fix people clickthrough

--- a/app/views/people.html
+++ b/app/views/people.html
@@ -19,7 +19,7 @@
                         <div class="col-xs-4 col-sm-3">
                             <h2>
                                 <strong style="color: white;">{{users.total_count}}</strong><br>
-                                <small><i class="fa fa-graduation-cap"></i> People</small>
+                                <small><i class="fa fa-leaf"></i> People</small>
                             </h2>
                         </div>
                         
