--- a/app/views/people.html
+++ b/app/views/people.html
@@ -99,7 +99,7 @@
             <!-- END Messages List Title -->
     
             <!-- Messages List Content -->
-            <div class="table-responsive" style="margin: 0 -10px;">
+            <div class="table-responsive" style="margin: 0 -10px;" ng-cloak>
                 <table class="table table-vcenter">                
                     <tbody>
                         <tr><td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td></tr>
@@ -114,7 +114,7 @@
                                 </a>
     					        <br>
                                 <span class="text-muted">{{::item.value.linkedin.headline}}</span>                                
-                                <span ng-if="showSummary" class="text-muted" style="white-space:pre-wrap;"><hr>{{::item.value.linkedin.summary}}</span>                                
+                                <span ng-show="showSummary" class="text-muted" style="white-space:pre-wrap;"><hr>{{::item.value.linkedin.summary}}</span>                                
                             </td>
                             <td style="width: 30%;">
                                 <li ng-repeat="(cluster, val) in item.value.cities[global.city.path.key].clusters" style="list-style: none; display: inline; float: right; padding-left: 5px;">
