--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -51,6 +51,10 @@
 														<a href="{{global.profile.value.linkedin.publicProfileUrl}}" class="btn btn-social btn-linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
 													</td>
 												</tr>
+												<tr ng-if="global.profile.path.key === global.user.path.key">
+													<td>API Key</td>
+													<td><a ng-click="getKey()">Show your API key</a></td>
+												</tr>
 											</tbody>
 										</table>
 										<a  ng-show="global.editProfile && (global.user.value.cities[global.city.path.key].admin == true)" ng-click="removeProfile(global.profile.path.key, global.profile.value.name)" class="btn btn-alt btn-danger"><i class="fa fa-times"></i> Delete {{::global.profile.value.name | words:0}} {{::global.profile.value.name | words:1}} {{::global.profile.value.name | words:2}}</a>                       
