--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -4,7 +4,7 @@
             <div class="header-section">
                 <div class="options">
 		            <div class="btn-toolbar pull-right">		            	
-		            	<a ng-click="global.editProfile = !global.editProfile" class="btn btn-alt btn-primary">Edit Profile</a>	                        
+		            	<a ng-click="global.editProfile = !global.editProfile" ng-class="'active' : global.editProfile" class="btn btn-alt btn-primary">Edit Profile</a>	                        
                     </div>	                   
 		        </div>
                 
