--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -61,17 +61,26 @@
 									</div>
 								</div>
 								<div class="col-md-6">									
-				                    <panel panel-class="panel-primary">
-				                    	<h3>Cluster Activity</h3>
+				                    <panel panel-class="panel-primary">			                    					                    	
 				                          <table class="table table-condensed" style="margin-bottom: -19px;">											
 											<tbody>
+												<tr><td style="padding: 0; border-top: none;">
+													<h3>Cluster Activity</h3>
+												</td><td style="padding: 0; border-top: none;">
+												<div class="checkbox" style="float: right; margin-top: 0px;">
+							                      <label class="icheck-label" ng-show="global.editProfile">
+							                      I advise all clusters&nbsp;
+							                        <div style="position: relative;" class="icheckbox_minimal-blue"><input style="position: absolute; opacity: 0;" ng-change="isCityAdvisor(cityAdvisor)" ng-model="cityAdvisor" ng-class="{'checked' : global.profile.value.cities[global.city.path.key].cityAdvisor}" icheck="" value="" type="checkbox"><ins style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: none repeat scroll 0% 0% rgb(255, 255, 255); border: 0px none; opacity: 0;" class="iCheck-helper"></ins></div>
+							                      </label>
+							                    </div>
+							                    </td></tr>
 					                            <tr ng-repeat="(cluster, val) in global.city.value.clusters" style="border-top: 1px solid #e9ecf0;">
 					                              <td style="border: none; padding: 8px 0 8px 0; width: 50%;">				                                					                                
 					                                  <h4><i class="fa {{val.icon}}" style="opacity: .6">&nbsp;</i> <strong>{{ cluster || 'empty' }}</strong> Cluster</h4>					                                
 					                              </td>
 					                              <td style="text-align: center; width: 50%;" ng-hide="global.editProfile">
 					                              	<ul style="padding-left:0px;">
-					                              		<span ng-if="(global.profile.value.cities[global.city.path.key].clusters[cluster] === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.length == 0)" class="btn btn-xs btn-default" style="margin-top: 10px; float: right; cursor: default;">Inactive</span>
+					                              		<span ng-if="(global.profile.value.cities[global.city.path.key].clusters[cluster] === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.length == 0)" class="btn btn-xs btn-default" style="margin-top: 10px; float: right; cursor: default;">Inactive</span>
 					                              		<li ng-repeat="role in global.profile.value.cities[global.city.path.key].clusters[cluster].roles | orderBy : role : true" style="list-style: none;">					                              			
 					                              			<span ng-class="{'btn btn-xs btn-info' : role == 'Advisor', 'btn btn-xs btn-success' : role == 'Member', 'btn btn-xs btn-danger' : role == 'Leader'}" style="margin-top: 10px; margin-left: 10px; float: right; cursor: default;">{{ role }}</span>
 					                              		</li>
@@ -80,15 +89,15 @@
 					                              <td style="text-align: center; border: none; padding: 15px 0 15px 0; width: 50%;" ng-show="global.editProfile">
 								                    <div class="col-md-4">
 								                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h5>Leader</h5></label>
-								                        <toggle-switch ng-init="leaderStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') >= 0)" ng-model="leaderStatus" ng-click="setRole(cluster, 'Leader', leaderStatus)" class="small-toggle danger" on-label="Yes" off-label="No" ng-disabled="(global.user.value.cities[global.city.path.key].admin !== true) && (global.user.value.cities[global.city.path.key].clusters[cluster] == undefined || global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0)"><toggle-switch>							
+								                        <toggle-switch ng-init="global.profile.value.cities[global.city.path.key].clusters[cluster].leaderStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') >= 0)" ng-model="global.profile.value.cities[global.city.path.key].clusters[cluster].leaderStatus" ng-click="setRole(cluster, 'Leader', global.profile.value.cities[global.city.path.key].clusters[cluster].leaderStatus)" class="small-toggle danger" on-label="Yes" off-label="No" ng-disabled="(global.profile.value.cities[global.city.path.key].cityAdvisor === true) || ((global.user.value.cities[global.city.path.key].admin !== true) && (global.user.value.cities[global.city.path.key].clusters[cluster] == undefined || global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0))"><toggle-switch>							
 								                    </div>
 								                    <div class="col-md-4">
 								                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h5>Advisor</h5></label>
-								                        <toggle-switch ng-init="advisorStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Advisor') >= 0)" ng-model="advisorStatus" ng-click="setRole(cluster, 'Advisor', advisorStatus)" class="info" on-label="Yes" off-label="No" style="line-height: 15px; min-width: 80px;" ng-disabled="(global.user.value.cities[global.city.path.key].admin !== true) && (global.user.value.cities[global.city.path.key].clusters[cluster] == undefined || global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0)"><toggle-switch>							
+								                        <toggle-switch ng-init="global.profile.value.cities[global.city.path.key].clusters[cluster].advisorStatus = ((global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Advisor') >= 0) || global.profile.value.cities[global.city.path.key].cityAdvisor === true)" ng-model="global.profile.value.cities[global.city.path.key].clusters[cluster].advisorStatus" ng-click="setRole(cluster, 'Advisor', global.profile.value.cities[global.city.path.key].clusters[cluster].advisorStatus)" class="info" on-label="Yes" off-label="No" style="line-height: 15px; min-width: 80px;" ng-disabled="(global.profile.value.cities[global.city.path.key].cityAdvisor === true) || ((global.user.value.cities[global.city.path.key].admin !== true) && (global.user.value.cities[global.city.path.key].clusters[cluster] == undefined || global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0))"><toggle-switch>							
 								                    </div>
 								                    <div class="col-md-4">
 								                        <label class="control-label" style="display: block; margin-bottom: -5px;"><h5>Member</h5></label>
-								                        <toggle-switch ng-init="memberStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Member') >= 0)" ng-model="memberStatus" ng-click="setRole(cluster, 'Member', memberStatus)" class="success" on-label="Yes" off-label="No" style="line-height: 15px !important; min-width: 80px;" ng-disabled="(global.user.value.cities[global.city.path.key].admin !== true) && (global.profile.path.key !== global.user.path.key) && ((global.user.value.cities[global.city.path.key].clusters[cluster] == undefined) || (global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0))"><toggle-switch>							
+								                        <toggle-switch ng-init="global.profile.value.cities[global.city.path.key].clusters[cluster].memberStatus = (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Member') >= 0)" ng-model="global.profile.value.cities[global.city.path.key].clusters[cluster].memberStatus" ng-click="setRole(cluster, 'Member', global.profile.value.cities[global.city.path.key].clusters[cluster].memberStatus)" class="success" on-label="Yes" off-label="No" style="line-height: 15px !important; min-width: 80px;" ng-disabled="(global.user.value.cities[global.city.path.key].admin !== true) && (global.profile.path.key !== global.user.path.key) && ((global.user.value.cities[global.city.path.key].clusters[cluster] == undefined) || (global.user.value.cities[global.city.path.key].clusters[cluster].roles.indexOf('Leader') < 0))"><toggle-switch>							
 								                    </div>
 					                              </td>	                             				                              
 					                            </tr>
