--- a/app/views/people.html
+++ b/app/views/people.html
@@ -96,7 +96,7 @@
                         <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
-                <h2><strong>People</strong> in Bend</h2>
+                <h2>{{title}}</h2>
             </div>
             <!-- END Messages List Title -->
     
