--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -80,7 +80,8 @@
 					                              </td>
 					                              <td style="text-align: center; width: 50%;" ng-hide="global.editProfile">
 					                              	<ul style="padding-left:0px;">
-					                              		<span ng-if="(global.profile.value.cities[global.city.path.key].clusters[cluster] === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.length == 0)" class="btn btn-xs btn-default" style="margin-top: 10px; float: right; cursor: default;">Inactive</span>
+					                              		<span ng-if="((global.profile.value.cities[global.city.path.key].clusters[cluster] === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles === undefined) || (global.profile.value.cities[global.city.path.key].clusters[cluster].roles.length == 0)) && global.profile.value.cities[global.city.path.key].cityAdvisor === false" class="btn btn-xs btn-default" style="margin-top: 10px; float: right; cursor: default;">Inactive</span>
+					                              		<span ng-if="global.profile.value.cities[global.city.path.key].cityAdvisor === true" class="btn btn-xs btn-info" style="margin-top: 10px; float: right; cursor: default;">Advisor</span>
 					                              		<li ng-repeat="role in global.profile.value.cities[global.city.path.key].clusters[cluster].roles | orderBy : role : true" style="list-style: none;">					                              			
 					                              			<span ng-class="{'btn btn-xs btn-info' : role == 'Advisor', 'btn btn-xs btn-success' : role == 'Member', 'btn btn-xs btn-danger' : role == 'Leader'}" style="margin-top: 10px; margin-left: 10px; float: right; cursor: default;">{{ role }}</span>
 					                              		</li>
