working bootstro from scope

--- a/app/views/people.html
+++ b/app/views/people.html
@@ -35,7 +35,7 @@
         
     <div class="col-md-4 col-lg-3">
         <!-- Navigation Block -->
-        <div class="block full filternav">
+        <div class="block full filternav beta" data-bootstro-title="test" data-bootstro-html="true" data-bootstro-content="{{global.beta.step1.content}}" data-bootstro-placement="right">
             <i ng-show="loadingRole==true" class="fa fa-refresh fa-spin pull-right"></i>
             <div class="block-title">
                 <h2><strong>Role</strong> Filters</h2>
