--- a/app/views/add_people.html
+++ b/app/views/add_people.html
@@ -1,9 +1,9 @@
 <div ng-controller="AddPeopleController">       
         
     <div class="content-header">
-        <div class="header-section">
+        <div class="header-section beta">
             <h1>
-                <i ng-class="{'fa fa-circle-o-notch fa-spin' : disabled, 'fa fa-leaf' : !disabled}"></i>Add People<br><small>This works best with the URL from the person's Linkedin profile.</small>
+                <i ng-class="{'fa fa-circle-o-notch fa-spin' : disabled, 'fa fa-leaf' : !disabled}" ></i>Add People<br><small>This works best with the URL from the person's Linkedin profile.</small>
             </h1>
         </div>
     </div>              
