--- a/app/assets/plugins/bootstro.js/bootstro.css
+++ b/app/assets/plugins/bootstro.js/bootstro.css
@@ -23,7 +23,7 @@
 	z-index: 9999;
 	position: relative;
 	border: 1px solid white;
-	background-color: white !important;
+	background-color: white;
 }
 
 .bootstro-finish-btn-wrapper
@@ -44,5 +44,3 @@
 	padding : 3px 5px 3px 5px !important;
 	font-weight:bold;
 }
-
-
