--- a/app/views/people.html
+++ b/app/views/people.html
@@ -1,7 +1,7 @@
 <div ng-controller="PeopleController">
 <!-- Dashboard Header -->
 <!-- For an image header add the class 'content-header-media' and an image as in the following example -->
-    <div class="content-header content-header-media">
+    <div class="content-header content-header-media beta1">
         <div class="header-section">
             <div class="row">
                 <!-- Main Title (hidden on small devices for the statistics to fit) -->
@@ -35,9 +35,9 @@
         
     <div class="col-md-4 col-lg-3">
         <!-- Navigation Block -->
-        <div class="block full filternav beta" data-bootstro-title="test" data-bootstro-html="true" data-bootstro-content="{{global.beta.step1.content}}" data-bootstro-placement="right">
+        <div class="block full filternav">
             <i ng-show="loadingRole==true" class="fa fa-refresh fa-spin pull-right"></i>
-            <div class="block-title">
+            <div class="block-title beta2">
                 <h2><strong>Role</strong> Filters</h2>
             </div>
             <ul class="nav nav-pills nav-stacked nav-icons">
