--- a/app/views/search.html
+++ b/app/views/search.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <!-- Main Title (hidden on small devices for the statistics to fit) -->
                 <div class="col-md-4 col-lg-6 hidden-xs hidden-sm">
-                    <h1><strong>{{global.city.value.citystate | words:0}}</strong> {{global.city.value.citystate | words:1}}<br><small>Welcome {{global.user.value.name | words:0}}!</small></h1>
+                    <h1><strong>Search</strong> Results<br><small>{{global.search.lastQuery}}</small></h1>
                 </div>
                 <!-- END Main Title -->
     
@@ -19,7 +19,7 @@
                         <div class="col-xs-4 col-sm-3">
                             <h2>
                                 <strong style="color: white;">{{global.search.total_count}}</strong><br>
-                                <small><i class="fa fa-graduation-cap"></i> Advisors</small>
+                                <small><i class="fa fa-leaf"></i> People</small>
                             </h2>
                         </div>
                         
@@ -29,22 +29,50 @@
             </div>
         </div>
         <!-- For best results use an image with a resolution of 2560x248 pixels (You can also use a blurred image with ratio 10:1 - eg: 1000x100 pixels - it will adjust and look great!) -->
-        <img src="assets/img/headers/widget5_header.jpg" alt="header image" class="animation-pulseSlow">
+        <img src="assets/img/headers/widget2_header.jpg" alt="header image" class="animation-pulseSlow">
     </div>
         <!-- END Dashboard Header -->
     
-    <div id="peoplelist">
-        <div class="row" style="margin-left: 10px; margin-right: 10px;">            
-            <div ng-show="global.search.results === undefined || global.search.results.length == 0" style="text-align: center"><h2>Sorry, there are no results for '{{global.search.query}}'!</h2></div>
-            <div class="col-sm-6 col-lg-4" ng-repeat="item in global.search.results" ng-include="'views/templates/people_renderer.html'">                 
-            </div>            
-        </div>              
-        <div class="row" style="margin-left: 1.5%; margin-right: 1.5%;"> 
-            <ul class="pager">
-                <li ng-if="global.search.prev" class="previous"><a ng-click="search(global.search.prev)"><i class="fa fa-arrow-left"></i> Prev</a></li>
-                <li ng-if="global.search.next" class="next"><a ng-click="search(global.search.next)">Next <i class="fa fa-arrow-right"></i></a></li>
-            </ul>
+    
+    
+    <div class="col-md-12 col-lg-12">
+    <!-- Messages List Block -->
+        <div class="block">
+            <!-- Messages List Title -->
+            <div class="block-title" style="margin-bottom: 0;">
+                <div class="block-options pull-right">
+                        <strong>{{global.search.start}} - {{global.search.end}}</strong> of <strong>{{global.search.total_count}}&nbsp;&nbsp;</strong>
+                    <div class="btn-group btn-group-sm" style="margin-top: -5px;">
+                        <span ng-if="global.search.prev"><a ng-click="getUsers(global.search.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="global.search.next"><a ng-click="getUsers(global.search.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                    </div>
+                </div>
+                <h2 ng-bind-html="title"></h2>
+            </div>
+            <!-- END Messages List Title -->
+    
+            <!-- Messages List Content -->
+            <div class="table-responsive" style="margin: 0 -10px;">
+                <table class="table table-vcenter">                
+                    <tbody>
+                        <tr><td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td></tr>
+                        <div ng-show="global.search.count == 0" style="text-align: center" ng-cloak><h2><br/>Sorry, there are no results for '{{global.search.lastQuery}}'!</h2></div>
+                        <tr ng-repeat="item in global.search.results" ng-include="'views/templates/people_renderer.html'"></tr>                        
+                        <tr>
+                            <td class="text-right" colspan="3">
+                                <strong>{{global.search.start}} - {{global.search.end}}</strong> of <strong>{{global.search.total_count}}&nbsp;&nbsp;</strong>
+                                <div class="btn-group btn-group-sm">
+                                    <span ng-if="global.search.prev"><a ng-click="getUsers(global.search.prev)" class="btn btn-sm btn-default" style="border-radius: 15px;"><i class="fa fa-angle-left"></i></a></span>
+                                    <span ng-if="global.search.next"><a ng-click="getUsers(global.search.next)" class="btn btn-sm btn-default" style="border-radius: 15px;"><i class="fa fa-angle-right"></i></a></span>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- END Messages List Content -->
         </div>
+        <!-- END Messages List Block -->
     </div>
 
 </div>
