--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,13 +3,13 @@
 	<h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A;">Kickstart your city's entrepreneurial ecosystem</h4>
 	<div class="panel panel-primary">
 		<div class="panel-body">
-			<h4 class="text-center" style="margin-bottom: 25px;">Log in using your email or &nbsp;<a class="btn btn-alt btn-info" ng-click="authenticate('linkedin')">Linkedin</a></h4>
+			<h4 class="text-center" style="margin-bottom: 25px;">Log in using &nbsp;<a class="btn btn-alt btn-info" ng-click="authenticate('linkedin')">Linkedin</a></h4>
 				<form method="post" ng-submit="login()" name="loginForm" class="form-horizontal" style="margin-bottom: 0px !important;">
 					<div class="form-group">
 						<div class="col-sm-12">
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-user"></i></span>
-								<input type="text" class="form-control" id="email" placeholder="Email" ng-model="email" autofocus required>
+								<input type="text" class="form-control" id="email" placeholder="Email" ng-model="email" autofocus required disabled>
 							</div>
 						</div>
 					</div>
@@ -17,7 +17,7 @@
 						<div class="col-sm-12">
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-								<input type="password" class="form-control" id="password" placeholder="Password" ng-model="password" required>
+								<input type="password" class="form-control" id="password" placeholder="Password" ng-model="password" required disabled>
 							</div>
 						</div>
 					</div>
@@ -28,7 +28,7 @@
 						<a class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
 						
 						<div class="pull-right">												
-							<button type="submit" class="btn btn-primary">Log In</button>
+							<button type="submit" class="btn btn-primary" disabled>Log In</button>
 						</div>
 					</div>
 				
