--- a/app/views/login.html
+++ b/app/views/login.html
@@ -22,7 +22,7 @@
 						</div>
 					</div>
 					<div ng-show="global.alert">
-						<alert type="{{global.alert.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="global.alert.msg | safe_html"></alert>
+						<alert type="{{global.alert.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="global.alert.msg | safe_html"></span></alert>
 					</div>
 					<div class="panel-footer">
 						<a class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
