added skills to search view

--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -32,7 +32,7 @@
 											<tbody>											
 												<tr>
 													<td>Web</td>
-													<td><a href="{{global.profile.value.linkedin.publicProfileUrl}}" target="_blank">{{global.profile.value.linkedin.publicProfileUrl}}</a></td>
+													<td><a href="{{global.profile.value.linkedin.publicProfileUrl}}" target="_blank">{{::global.profile.value.linkedin.publicProfileUrl}}</a></td>
 												</tr>
 												<tr ng-if="global.profile.value.email">
 													<td>Email</td>
@@ -110,9 +110,9 @@
 							<hr>
 							<div class="col-md-12">
 								<h3>Summary</h3>									
-								<p style="white-space:pre-wrap;">{{global.profile.value.linkedin.summary}}</p>
-								<h3>Skills:</h3>
-								<li ng-repeat="skill in global.profile.value.linkedin.skills.values" class="label btn-info" style="margin-right: 3px; margin-top: 3px; float:left; padding-bottom: 5px;">{{skill.skill.name}}</li>								
+								<p style="white-space:pre-wrap;">{{::global.profile.value.linkedin.summary}}</p>
+								<h3>Skills</h3>
+								<li ng-repeat="skill in global.profile.value.linkedin.skills.values" class="label btn-info" style="margin-right: 3px; margin-top: 3px; float:left; padding-bottom: 5px;">{{::skill.skill.name}}</li>								
 	            			</div>
 						</div>
 					</div>
