--- a/app/views/templates/people_renderer.html
+++ b/app/views/templates/people_renderer.html
@@ -20,7 +20,7 @@
     <li ng-if="item.value.cities[global.city.path.key].cityAdvisor === true" style="list-style: none; display: inline; float: right; padding-left: 5px;">
        <span title="General Advisor" class="btn btn-xs btn-alt btn-info" style="cursor: default;">General Advisor</span>
     </li>
-    <div id="skills" style="padding-top:40px">
+    <div id="skills" ng-show="(showSummary || global.search.count) && item.value.linkedin.summary" style="padding-top:40px">
         <li ng-repeat="skill in item.value.linkedin.skills.values" class="label btn-default" style="margin-right: 3px; margin-top: 3px; float:right; padding-bottom: 5px;">
             <span ng-bind-html="::skill.skill.name | highlight:global.search.lastQuery"></span>
         </li>			
