--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,38 +2,11 @@
 	<a href="/"><img src="assets/img/logo-big.png" alt="Logo" class="brand" style="margin-bottom: -50px; width: 100%;"/></a>
 	<h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A;">Kickstart your city's entrepreneurial ecosystem</h4>
 	<div class="panel panel-primary">
-		<div class="panel-body">
-			<h4 class="text-center" style="margin-bottom: 25px;">Log in using &nbsp;<a class="btn btn-alt btn-info" ng-click="authenticate('linkedin')">Linkedin</a></h4>
-				<form method="post" ng-submit="login()" name="loginForm" class="form-horizontal" style="margin-bottom: 0px !important;">
-					<div class="form-group">
-						<div class="col-sm-12">
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-user"></i></span>
-								<input type="text" class="form-control" id="email" placeholder="Email" ng-model="email" autofocus required disabled>
-							</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-12">
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-								<input type="password" class="form-control" id="password" placeholder="Password" ng-model="password" required disabled>
-							</div>
-						</div>
-					</div>
-					<div ng-show="global.alert">
-						<alert type="{{global.alert.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="global.alert.msg | safe_html"></span></alert>
-					</div>
-					<div class="panel-footer">
-						<a class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
-						
-						<div class="pull-right">												
-							<button type="submit" class="btn btn-primary" disabled>Log In</button>
-						</div>
-					</div>
-				
-				</form>
-					
+		<div class="panel-body" style="padding: 15px; border-left: 1px solid #e1e3e8; border-right: 1px solid #e1e3e8; border-bottom: 1px solid #e1e3e8; background-color: #FFF;">
+			<h4 class="text-center" style="margin-bottom: 25px;">Log in using &nbsp;<a class="btn btn-info" ng-click="authenticate('linkedin')">Linkedin</a></h4>
+            <div ng-show="global.alert">
+                <alert type="{{global.alert.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="global.alert.msg | safe_html"></span></alert>
+            </div>
 		</div>
 		
 	</div>
